feat(unit-test): add unit test fieldChecker